@@ -1,5 +1,6 @@
 Changes for 1.8.3rc4
 
+ - [ZBX-2830] fixed editing map without default icons (Aly)
  - [ZBX-2836] fixed text items history not displaying all spaces in text (Vedmak)
  - [ZBX-2835] improved screen permission checks in frontend (Vedmak)
  - [ZBX-2829] fixed web item graphs favourites (Vedmak)
